--- a/miniprogram/pages/catalog/catalog.wxml
+++ b/miniprogram/pages/catalog/catalog.wxml
@@ -1,1 +1,2 @@
 <van-cell title="地区选择（树形结构）" is-link url="/pages/treePage/treePage" />
+<van-cell title="获取微信步数" is-link url="/pages/stepNumber/stepNumber" />
